applications/keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Keycloak
    gethomepage.dev/description: Open Source Identity and Access Management For Modern Applications and Services
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: keycloak
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.services.sbling.net
      secretName: keycloak-services-sbling-net-prod-cert
